unpackaged/main/default/objects/Auto_Solve_Package__c/Auto_Solve_Package__c.object-meta.xml
<CustomObject>
    <description>This object will contain records including filter criteria that will be used to auto reply to customs on Tax Notice or LSI issues. The records will be processed in a Batch triggering a generic email alert sent through flow. POC: Todd, Sanjay, Garrett</description>
    <label>Auto Solve Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto Solve Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>