unpackaged/main/default/objects/Auto_Solve_Package__c/fields/Automation_Status__c.field-meta.xml
<CustomField>
    <fullName>Automation_Status__c</fullName>
    <label>Automation Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>