unpackaged/main/default/objects/Auto_Solve_Package__c/fields/Field_Set_Used__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_Used__c</fullName>
    <description>This will tell you which field set is used for a particular package.</description>
    <label>Field Set Used</label>
    <length>50</length>
    <type>Text</type>
</CustomField>