unpackaged/main/default/objects/Auto_Solve_Package__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Root cause values that will be stamped on Case records from TaxNoticePackageBatch process.</description>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Journey__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Root_Cause</valueSetName>
    </valueSet>
</CustomField>