unpackaged/main/default/objects/Auto_Solve_Package__c/fields/Sub_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Sub_Root_Cause__c</fullName>
    <description>Sub Root Case value will be stamped on Case from TaxNoticePackageBatch process.</description>
    <label>Sub Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Root_Cause__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unactionable</fullName>
            </value>
            <value>
                <fullName>Filing Requirement</fullName>
            </value>
            <value>
                <fullName>E-file Requirement</fullName>
            </value>
            <value>
                <fullName>Address change</fullName>
            </value>
            <value>
                <fullName>Filing Frequency</fullName>
            </value>
            <value>
                <fullName>Late Payment</fullName>
            </value>
            <value>
                <fullName>Registration Notice</fullName>
            </value>
            <value>
                <fullName>TPA Authorization</fullName>
            </value>
            <value>
                <fullName>$0 Return Filed</fullName>
            </value>
            <value>
                <fullName>$0 Return Missing For Quarter Prior To Gusto</fullName>
            </value>
            <value>
                <fullName>$0 Return Not Filed</fullName>
            </value>
            <value>
                <fullName>941 - R&amp;D Credit</fullName>
            </value>
            <value>
                <fullName>944/941</fullName>
            </value>
            <value>
                <fullName>Agency Delay</fullName>
            </value>
            <value>
                <fullName>Agency Exchange Error</fullName>
            </value>
            <value>
                <fullName>Agency exchange misinformation</fullName>
            </value>
            <value>
                <fullName>Amendment Pending</fullName>
            </value>
            <value>
                <fullName>Backdated/Same Day Payroll</fullName>
            </value>
            <value>
                <fullName>Backdated Payroll</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Care - incorrect account number</fullName>
            </value>
            <value>
                <fullName>Care - incorrect advice</fullName>
            </value>
            <value>
                <fullName>Care- incorrect advice</fullName>
            </value>
            <value>
                <fullName>Care - incorrect deposit/filing selection</fullName>
            </value>
            <value>
                <fullName>Care - incorrect deposit/filing selections</fullName>
            </value>
            <value>
                <fullName>Care - incorrect external payrolls and/or liabilites</fullName>
            </value>
            <value>
                <fullName>Care - incorrect external payrolls and/or liabilities</fullName>
            </value>
            <value>
                <fullName>Client Resolved on Their Own</fullName>
            </value>
            <value>
                <fullName>Compliance: Research Issue</fullName>
            </value>
            <value>
                <fullName>Compliance- Research issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>