unpackaged/main/default/objects/Auto_Solve_Package__c/recordTypes/Auto_Solve_Batch.recordType-meta.xml
<RecordType>
    <fullName>Auto_Solve_Batch</fullName>
    <active>true</active>
    <label>Auto-Solve Batch</label>
</RecordType>