unpackaged/main/default/objects/Auto_Solve_Package__c/recordTypes/Auto_Solve_Relative.recordType-meta.xml
<RecordType>
    <fullName>Auto_Solve_Relative</fullName>
    <active>true</active>
    <label>Auto-Solve Relative</label>
</RecordType>