unpackaged/main/default/objects/Auto_Solve_Package__c/validationRules/Package_Name_is_not_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Package_Name_is_not_populated</fullName>
    <active>true</active>
    <description>Every Record needs to have a Package name and can not change</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Auto_Solve_Batch&apos; &amp;&amp; (  ISCHANGED(  Name ) ||  ISBLANK( Name ) )</errorConditionFormula>
    <errorMessage>Auto Solve Packages have to have a Package Name and can not be changed.</errorMessage>
</ValidationRule>