unpackaged/main/default/objects/Auto_Solve_Package__c/validationRules/Package_Name_should_not_be_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Package_Name_should_not_be_Same</fullName>
    <active>true</active>
    <errorConditionFormula>and( 

 Name = VLOOKUP 
 ($ObjectType.Auto_Solve_Package__c.Fields.Name , 
  $ObjectType.Auto_Solve_Package__c.Fields.Name, Name ), 

 not( 
 Id=VLOOKUP 
 ($ObjectType.Auto_Solve_Package__c.Fields.Id , $ObjectType.Auto_Solve_Package__c.Fields.Name, Name   
    )

   )
)</errorConditionFormula>
    <errorMessage>Cloned package name should not be same as an existing package</errorMessage>
</ValidationRule>