unpackaged/main/default/objects/Auto_Solve_Package__c/validationRules/Tax_Notice_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Notice_Amount_Validation</fullName>
    <active>true</active>
    <description>Tax Notice Start and End Date fields plus Tax Notice Date field can not both be populated.</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Auto_Solve_Batch&apos; &amp;&amp; (( NOT( ISBLANK(  Tax_Notice_Amount_Total__c )) 
&amp;&amp; (
    NOT( ISBLANK(  Lowest_Tax_Notice_Amount__c )) 
    || NOT( ISBLANK(  Highest_Tax_Notice_Amount__c ))
) )

||

( ISBLANK(  Tax_Notice_Amount_Total__c ) 
&amp;&amp; (
    NOT( ISBLANK( Lowest_Tax_Notice_Amount__c ))
    &amp;&amp; ISBLANK(  Highest_Tax_Notice_Amount__c )
) )

||

( ISBLANK(  Tax_Notice_Amount_Total__c ) 
&amp;&amp; (
    ISBLANK( Lowest_Tax_Notice_Amount__c )
    &amp;&amp; NOT( ISBLANK(  Highest_Tax_Notice_Amount__c ))
) ))</errorConditionFormula>
    <errorMessage>If you include a Tax Notice Amount range (Lowest and Highest Tax Notice Amounts) if you include a single Tax Notice Amount - Total. Also, if you include either Lowest or Highest Tax Notice amount you need to populate both values.</errorMessage>
</ValidationRule>